samples/_failures_safe/1761417473_45d8cd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_842f10cc.c: In function ‘main’:
./samples/SAFE/__tmp_842f10cc.c:149:13: error: expected declaration or statement at end of input
  149 |             return 1;
      |             ^~~~~~
./samples/SAFE/__tmp_842f10cc.c:149:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_842f10cc.c:149:13: error: expected declaration or statement at end of input
